--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: url(./assets/bg5.png);
+  background-image: url("./assets/bg5.png");
   background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
